--- a/bundles/org.eclipse.orion.client.ui/web/edit/edit.css
+++ b/bundles/org.eclipse.orion.client.ui/web/edit/edit.css
@@ -22,37 +22,4 @@
 	padding: 0;
 }
 
-.findSlideoutButton {
-	color: silver;
-	border: 1px solid transparent;
-	text-align: center;
-	vertical-align: top;
-    cursor: pointer;
-    display: inline-block;
-    padding: 4px;
-    margin-left: 8px;
-    border-radius:1px;
-    font-weight: normal;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
 
-.findSlideoutMenu {
-	color: silver;
-	background-color: transparent;
-	border: 1px solid transparent;
-	padding: 1px;
-    font-weight: normal;
-    margin: 0;
-    margin-left: 8px;
-	text-align: center;
-}
-
-.findSlideoutButton:hover {
-	background-color: #efefef;
-	border: 1px solid #222;
-}
